SLING-8512 Make testing compliant with Java 9 and higher
* Update Pax Exam to 4.13.1
* Update Testing PaxExam to 3.0.0
* Update Felix Framework to 6.0.3
* Remove workaround